(1) Fixed problem with scroll when sidebar is collapsed

--- a/src/main/webapp/components/sidebar/sidebar.vilarika.css
+++ b/src/main/webapp/components/sidebar/sidebar.vilarika.css
@@ -56,9 +56,10 @@ nav.vr-sidebar .menu {
 
 nav.vr-sidebar li.item {
 	height: 44px;
-	overflow-y: hidden;
+	overflow: hidden;
 
 	transition: all .4s;
+	-webkit-transition: all .4s;
 }
 
 	nav.vr-sidebar li.item .fa.arrow {
